--- a/src/inc/html/paper_computing.htm
+++ b/src/inc/html/paper_computing.htm
@@ -90,6 +90,11 @@
 <li>Linear homeoscope</li>
 <li>Rubik's cube</li>
 <li>Game of life</li>
+<li>Modern Devices</li>
+<li>laserboy</li>
+<li>Ozobot</li>
+<li>Piet Esolang</li>
+<li>Nasa Sonification</li>
 </ul>
 
  -->
